# Creakwood-Clinic

./: README.md
medic/: Llama3.1Modelfile  README.md  pyproject.toml  temp.txt
medic/knowledge/: clinic_DB.txt  clinic_appointments.txt  clinic_public_info.txt
medic/knowledge/user_devices/: email.txt  phone.txt
medic/src/medic/: crew.py  flow.py  main.py
medic/src/medic/config/: agents.yaml  tasks.yaml
