[project]
name = "medic"
version = "0.1.0"
description = "medic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.6.1",
    "crewai[ollama,tools]==1.6.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "litellm>=1.80.8",
]

[project.scripts]
medic = "medic.main:run"
run_crew = "medic.main:run"
kickoff = "medic.main:kickoff"
plot = "medic.main:plot"
run_with_trigger = "medic.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
